# conan-package-components-test

./: .gitignore  CMakeLists.txt  conanfile.py
src/: ai.cpp
test_package/: CMakeLists.txt
test_package/src/: example.cpp
